fix(auth): correct JwksCache method signature and RSA key construction for JWT validation
- Updated resolveSigningKey to match JJWT SigningKeyResolverAdapter signature
- Changed fetchKey to return PublicKey to satisfy computeIfAbsent contract
- Implemented proper RSA modulus/exponent handling for JWKS keys
- Removed raw type warnings and fixed unused variable issues
- Ensured compatibility with Cognito/Keycloak JWT validation