@@ -21,7 +21,7 @@ public final class RequestFingerprintGenerator {
 
     private static String bytesToHex(byte[] bytes) {
         StringBuilder sb = new StringBuilder();
-        for (byte b : bytes) sb.append(String.format("%02x", b));
+        for (byte b : bytes) sb.append("%02x".formatted(b));
         return sb.toString();
     }
 }
